log-output-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-app
  namespace: log-output-app-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output-app
  template:
    metadata:
      labels:
        app: log-output-app
    spec:
      volumes:
        - name: app-logs
          persistentVolumeClaim:
            claimName: apps-claim
        - name: config-map-volume
          configMap:
            name: log-output-app-configmap
            items:
              - key: information.txt
                path: information.txt
      containers:
        - name: file-writer-app
          image: hzville/devops-with-kubernetes:file-writer-app
          imagePullPolicy: Always
          volumeMounts:
          - name: app-logs
            mountPath: /usr/src/app/files
        - name: file-reader-app
          image: hzville/devops-with-kubernetes:file-reader-app
          imagePullPolicy: Always
          volumeMounts:
          - name: app-logs
            mountPath: /usr/src/app/files
          - name: config-map-volume
            mountPath: /usr/src/app/config-map
